--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-infinite-scroll-hook": "^3.0.0",
+    "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.4",
     "typescript": "~3.7.2"
   },
@@ -37,5 +38,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/react-loader-spinner": "^3.1.1"
+  }
 }
